// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokenizer empty string 1`] = `[]`;

exports[`Tokenizer space 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "space",
    "value": " ",
  },
]
`;

exports[`Tokenizer boolean literals 1`] = `
[
  {
    "end": 4,
    "start": 0,
    "tag": "true",
    "value": "true",
  },
]
`;

exports[`Tokenizer boolean literals 2`] = `
[
  {
    "end": 4,
    "start": 0,
    "tag": "true",
    "value": "True",
  },
]
`;

exports[`Tokenizer boolean literals 3`] = `
[
  {
    "end": 4,
    "start": 0,
    "tag": "true",
    "value": "TRUE",
  },
]
`;

exports[`Tokenizer boolean literals 4`] = `
[
  {
    "end": 5,
    "start": 0,
    "tag": "false",
    "value": "false",
  },
]
`;

exports[`Tokenizer boolean literals 5`] = `
[
  {
    "end": 5,
    "start": 0,
    "tag": "false",
    "value": "False",
  },
]
`;

exports[`Tokenizer boolean literals 6`] = `
[
  {
    "end": 5,
    "start": 0,
    "tag": "false",
    "value": "FALSE",
  },
]
`;

exports[`Tokenizer integers 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer integers 2`] = `
[
  {
    "end": 2,
    "start": 0,
    "tag": "integer",
    "value": "-1",
  },
]
`;

exports[`Tokenizer integers 3`] = `
[
  {
    "end": 2,
    "start": 0,
    "tag": "integer",
    "value": "+1",
  },
]
`;

exports[`Tokenizer integers 4`] = `
[
  {
    "end": 2,
    "start": 0,
    "tag": "integer",
    "value": "50",
  },
]
`;

exports[`Tokenizer integers 5`] = `
[
  {
    "end": 21,
    "start": 0,
    "tag": "integer",
    "value": "999999999999999999999",
  },
]
`;

exports[`Tokenizer floats 1`] = `
[
  {
    "end": 3,
    "start": 0,
    "tag": "float",
    "value": "1.2",
  },
]
`;

exports[`Tokenizer floats 2`] = `
[
  {
    "end": 4,
    "start": 0,
    "tag": "float",
    "value": "-1.2",
  },
]
`;

exports[`Tokenizer floats 3`] = `
[
  {
    "end": 4,
    "start": 0,
    "tag": "float",
    "value": "+1.2",
  },
]
`;

exports[`Tokenizer floats 4`] = `
[
  {
    "end": 5,
    "start": 0,
    "tag": "float",
    "value": "49.99",
  },
]
`;

exports[`Tokenizer floats 5`] = `
[
  {
    "end": 31,
    "start": 0,
    "tag": "float",
    "value": "999999999999999999999.999999999",
  },
]
`;

exports[`Tokenizer comparators 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "=",
    "value": "=",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer comparators 2`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 4,
    "start": 2,
    "tag": "=",
    "value": "==",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer comparators 3`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 4,
    "start": 2,
    "tag": "!=",
    "value": "!=",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer comparators 4`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 2,
    "tag": "!=",
    "value": "!==",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 7,
    "start": 6,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer comparators 5`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 3,
    "start": 2,
    "tag": ">",
    "value": ">",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer comparators 6`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 4,
    "start": 2,
    "tag": ">=",
    "value": ">=",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer comparators 7`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "<",
    "value": "<",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer comparators 8`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 4,
    "start": 2,
    "tag": "<=",
    "value": "<=",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "integer",
    "value": "1",
  },
]
`;

exports[`Tokenizer booleans 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 4,
    "start": 2,
    "tag": "&&",
    "value": "&&",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "key",
    "value": "b",
  },
]
`;

exports[`Tokenizer booleans 2`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 2,
    "tag": "&&",
    "value": "and",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 7,
    "start": 6,
    "tag": "key",
    "value": "b",
  },
]
`;

exports[`Tokenizer booleans 3`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 4,
    "start": 2,
    "tag": "||",
    "value": "||",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "key",
    "value": "b",
  },
]
`;

exports[`Tokenizer booleans 4`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 4,
    "start": 2,
    "tag": "||",
    "value": "or",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "key",
    "value": "b",
  },
]
`;

exports[`Tokenizer booleans 5`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "!",
    "value": "!",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "key",
    "value": "a",
  },
]
`;

exports[`Tokenizer booleans 6`] = `
[
  {
    "end": 3,
    "start": 0,
    "tag": "!",
    "value": "not",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "key",
    "value": "a",
  },
]
`;

exports[`Tokenizer booleans 7`] = `
[
  {
    "end": 4,
    "start": 0,
    "tag": "key",
    "value": "nota",
  },
]
`;

exports[`Tokenizer parens 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 3,
    "tag": "&&",
    "value": "&&",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 7,
    "start": 6,
    "tag": "key",
    "value": "b",
  },
  {
    "end": 8,
    "start": 7,
    "tag": ")",
    "value": ")",
  },
]
`;

exports[`Tokenizer parens 2`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 4,
    "tag": "&&",
    "value": "&&",
  },
  {
    "end": 7,
    "start": 6,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 8,
    "start": 7,
    "tag": "key",
    "value": "b",
  },
  {
    "end": 9,
    "start": 8,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 10,
    "start": 9,
    "tag": ")",
    "value": ")",
  },
]
`;

exports[`Tokenizer parens 3`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 3,
    "start": 2,
    "tag": ")",
    "value": ")",
  },
]
`;

exports[`Tokenizer parens 4`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 3,
    "start": 2,
    "tag": ")",
    "value": ")",
  },
]
`;

exports[`Tokenizer parens 5`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 4,
    "tag": ")",
    "value": ")",
  },
]
`;

exports[`Tokenizer parens 6`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 4,
    "start": 3,
    "tag": ")",
    "value": ")",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
]
`;

exports[`Tokenizer parens 7`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "f",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 3,
    "start": 2,
    "tag": ")",
    "value": ")",
  },
]
`;

exports[`Tokenizer parens 8`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 4,
    "start": 3,
    "tag": ")",
    "value": ")",
  },
  {
    "end": 5,
    "start": 4,
    "tag": ")",
    "value": ")",
  },
  {
    "end": 6,
    "start": 5,
    "tag": ")",
    "value": ")",
  },
]
`;

exports[`Tokenizer parens 9`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer parens 10`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "key",
    "value": "a",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer parens 11`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer parens 12`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer parens 13`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "]",
    "value": "]",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
]
`;

exports[`Tokenizer parens 14`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "f",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer parens 15`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "]",
    "value": "]",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "]",
    "value": "]",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer lists 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer lists 2`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 3,
    "start": 2,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "integer",
    "value": "2",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer lists 3`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 3,
    "start": 2,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "integer",
    "value": "2",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer lists 4`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 4,
    "start": 3,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "integer",
    "value": "2",
  },
  {
    "end": 7,
    "start": 6,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 8,
    "start": 7,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer lists 5`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 3,
    "start": 2,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 4,
    "start": 3,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer lists 6`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 3,
    "start": 2,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "integer",
    "value": "2",
  },
  {
    "end": 5,
    "start": 4,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer keys 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "key",
    "value": "a",
  },
]
`;

exports[`Tokenizer keys 2`] = `
[
  {
    "end": 2,
    "start": 0,
    "tag": "key",
    "value": "a1",
  },
]
`;

exports[`Tokenizer keys 3`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "key",
    "value": "a",
  },
]
`;

exports[`Tokenizer strings 1`] = `
[
  {
    "end": 3,
    "start": 0,
    "tag": "singleQuotedStringLiteral",
    "value": "a",
  },
]
`;

exports[`Tokenizer strings 2`] = `
[
  {
    "end": 10,
    "start": 0,
    "tag": "singleQuotedStringLiteral",
    "value": "fizzbuzz",
  },
]
`;

exports[`Tokenizer strings 3`] = `
[
  {
    "end": 6,
    "start": 0,
    "tag": "singleQuotedStringLiteral",
    "value": 
"a

a"
,
  },
]
`;

exports[`Tokenizer strings 4`] = `
[
  {
    "end": 5,
    "start": 0,
    "tag": "singleQuotedStringLiteral",
    "value": "a\'",
  },
]
`;

exports[`Tokenizer strings 5`] = `
[
  {
    "end": 3,
    "start": 0,
    "tag": "singleQuotedStringLiteral",
    "value": "1",
  },
]
`;

exports[`Tokenizer strings 6`] = `
[
  {
    "end": 12,
    "start": 0,
    "tag": "singleQuotedStringLiteral",
    "value": "!@#$%^&*()",
  },
]
`;

exports[`Tokenizer strings 7`] = `
[
  {
    "end": 2,
    "start": 0,
    "tag": "singleQuotedStringLiteral",
    "value": "",
  },
]
`;

exports[`Tokenizer strings 8`] = `
[
  {
    "end": 3,
    "start": 0,
    "tag": "singleQuotedStringLiteral",
    "value": " ",
  },
]
`;

exports[`Tokenizer strings 9`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 1,
    "tag": "singleQuotedStringLiteral",
    "value": "   ",
  },
  {
    "end": 7,
    "start": 6,
    "tag": "space",
    "value": " ",
  },
]
`;

exports[`Tokenizer strings 10`] = `
[
  {
    "end": 3,
    "start": 0,
    "tag": "doubleQuotedStringLiteral",
    "value": "a",
  },
]
`;

exports[`Tokenizer strings 11`] = `
[
  {
    "end": 10,
    "start": 0,
    "tag": "doubleQuotedStringLiteral",
    "value": "fizzbuzz",
  },
]
`;

exports[`Tokenizer strings 12`] = `
[
  {
    "end": 6,
    "start": 0,
    "tag": "doubleQuotedStringLiteral",
    "value": 
"a

a"
,
  },
]
`;

exports[`Tokenizer strings 13`] = `
[
  {
    "end": 5,
    "start": 0,
    "tag": "doubleQuotedStringLiteral",
    "value": "a\"",
  },
]
`;

exports[`Tokenizer strings 14`] = `
[
  {
    "end": 3,
    "start": 0,
    "tag": "doubleQuotedStringLiteral",
    "value": "1",
  },
]
`;

exports[`Tokenizer strings 15`] = `
[
  {
    "end": 12,
    "start": 0,
    "tag": "doubleQuotedStringLiteral",
    "value": "!@#$%^&*()",
  },
]
`;

exports[`Tokenizer strings 16`] = `
[
  {
    "end": 2,
    "start": 0,
    "tag": "doubleQuotedStringLiteral",
    "value": "",
  },
]
`;

exports[`Tokenizer strings 17`] = `
[
  {
    "end": 3,
    "start": 0,
    "tag": "doubleQuotedStringLiteral",
    "value": " ",
  },
]
`;

exports[`Tokenizer strings 18`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 6,
    "start": 1,
    "tag": "doubleQuotedStringLiteral",
    "value": "   ",
  },
  {
    "end": 7,
    "start": 6,
    "tag": "space",
    "value": " ",
  },
]
`;

exports[`Tokenizer complex 1`] = `
[
  {
    "end": 8,
    "start": 0,
    "tag": "key",
    "value": "aaa.bb.c",
  },
  {
    "end": 9,
    "start": 8,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 11,
    "start": 9,
    "tag": "=",
    "value": "==",
  },
  {
    "end": 12,
    "start": 11,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 15,
    "start": 12,
    "tag": "float",
    "value": "1.5",
  },
  {
    "end": 16,
    "start": 15,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 18,
    "start": 16,
    "tag": "&&",
    "value": "&&",
  },
  {
    "end": 19,
    "start": 18,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 20,
    "start": 19,
    "tag": "(",
    "value": "(",
  },
  {
    "end": 28,
    "start": 20,
    "tag": "key",
    "value": "res.some",
  },
  {
    "end": 29,
    "start": 28,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 32,
    "start": 29,
    "tag": "!=",
    "value": "!==",
  },
  {
    "end": 33,
    "start": 32,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 40,
    "start": 33,
    "tag": "doubleQuotedStringLiteral",
    "value": "thing",
  },
  {
    "end": 41,
    "start": 40,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 43,
    "start": 41,
    "tag": "||",
    "value": "or",
  },
  {
    "end": 44,
    "start": 43,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 49,
    "start": 44,
    "tag": "false",
    "value": "FALSE",
  },
  {
    "end": 50,
    "start": 49,
    "tag": ")",
    "value": ")",
  },
  {
    "end": 51,
    "start": 50,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 53,
    "start": 51,
    "tag": "&&",
    "value": "&&",
  },
  {
    "end": 54,
    "start": 53,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 59,
    "start": 54,
    "tag": "key",
    "value": "value",
  },
  {
    "end": 60,
    "start": 59,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 62,
    "start": 60,
    "tag": ">=",
    "value": ">=",
  },
  {
    "end": 63,
    "start": 62,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 65,
    "start": 63,
    "tag": "integer",
    "value": "-1",
  },
  {
    "end": 66,
    "start": 65,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 68,
    "start": 66,
    "tag": "&&",
    "value": "&&",
  },
  {
    "end": 69,
    "start": 68,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 74,
    "start": 69,
    "tag": "key",
    "value": "value",
  },
  {
    "end": 75,
    "start": 74,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 76,
    "start": 75,
    "tag": "<",
    "value": "<",
  },
  {
    "end": 77,
    "start": 76,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 81,
    "start": 77,
    "tag": "float",
    "value": "-.16",
  },
  {
    "end": 82,
    "start": 81,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 85,
    "start": 82,
    "tag": "&&",
    "value": "and",
  },
  {
    "end": 86,
    "start": 85,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 89,
    "start": 86,
    "tag": "key",
    "value": "key",
  },
  {
    "end": 90,
    "start": 89,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 92,
    "start": 90,
    "tag": "in",
    "value": "in",
  },
  {
    "end": 93,
    "start": 92,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 94,
    "start": 93,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 95,
    "start": 94,
    "tag": "integer",
    "value": "1",
  },
  {
    "end": 96,
    "start": 95,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 99,
    "start": 96,
    "tag": "singleQuotedStringLiteral",
    "value": "2",
  },
  {
    "end": 100,
    "start": 99,
    "tag": ",",
    "value": ",",
  },
  {
    "end": 103,
    "start": 100,
    "tag": "float",
    "value": "3.0",
  },
  {
    "end": 104,
    "start": 103,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer complex 2`] = `
[
  {
    "end": 1,
    "start": 0,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 2,
    "start": 1,
    "tag": "]",
    "value": "]",
  },
  {
    "end": 3,
    "start": 2,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 4,
    "start": 3,
    "tag": "]",
    "value": "]",
  },
  {
    "end": 5,
    "start": 4,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 6,
    "start": 5,
    "tag": "]",
    "value": "]",
  },
  {
    "end": 7,
    "start": 6,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 8,
    "start": 7,
    "tag": "]",
    "value": "]",
  },
  {
    "end": 9,
    "start": 8,
    "tag": "[",
    "value": "[",
  },
  {
    "end": 10,
    "start": 9,
    "tag": "]",
    "value": "]",
  },
]
`;

exports[`Tokenizer complex 3`] = `
[
  {
    "end": 10,
    "start": 0,
    "tag": "key",
    "value": "some.thing",
  },
  {
    "end": 11,
    "start": 10,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 13,
    "start": 11,
    "tag": "=",
    "value": "==",
  },
  {
    "end": 14,
    "start": 13,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 17,
    "start": 14,
    "tag": "singleQuotedStringLiteral",
    "value": "a",
  },
  {
    "end": 18,
    "start": 17,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 20,
    "start": 18,
    "tag": "||",
    "value": "||",
  },
  {
    "end": 21,
    "start": 20,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 31,
    "start": 21,
    "tag": "key",
    "value": "some.thing",
  },
  {
    "end": 32,
    "start": 31,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 34,
    "start": 32,
    "tag": "=",
    "value": "==",
  },
  {
    "end": 35,
    "start": 34,
    "tag": "space",
    "value": " ",
  },
  {
    "end": 38,
    "start": 35,
    "tag": "singleQuotedStringLiteral",
    "value": "b",
  },
]
`;
